initial working version of FinSecureApp